Ensure SVG map doesn't overflow container; Add underline style to heading level two

--- a/mockup/source/sass/_avert_app.scss
+++ b/mockup/source/sass/_avert_app.scss
@@ -106,10 +106,7 @@
 .avert-region-map {
   margin-bottom: 1.5rem;
 
-  // temporary
-  img {
-    display: block;
-    margin: 0 auto;
+  svg {
     max-width: 100%;
     height: auto;
   }
